# text2deck

./: .gitignore  Cargo.toml  README.md  build.sh
worker/: Cargo.toml  wrangler.toml
worker/src/: error.rs  lib.rs  oauth.rs  slides.rs  splitter.rs
