[package]
name = "text2deck-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
worker = "0.6.1"
console_error_panic_hook = { version = "0.1", optional = true }
rand = "0.9.2"
base64 = "0.22.1"
sha2 = "0.10.9"
serde_urlencoded = "0.7.1"

[features]
default = []
panic-hook = ["console_error_panic_hook"]
